<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search_movie"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_search_tv"
        android:icon="@drawable/icon_search"
        android:title="@string/search_tv"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/setting_apps"
        app:showAsAction="never" />

</menu>
